# rusty-envoy-plane

./: .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs  docker-compose.yml
envoy/: config.yaml
src/: lib.rs  main.rs  well_knowns.rs
src/api/: mod.rs
src/cache/: mod.rs  order.rs  resource.rs  resources.rs  simple.rs  snapshot.rs  status.rs  types.rs
src/resource/: mod.rs
src/server/: mod.rs  service.rs  stream.rs  watches.rs
src/server/discovery/: cluster.rs  listener.rs  mod.rs  route.rs
src/types/: config.rs  extensions.rs  mod.rs
