[package]
name = "rusty-envoy-plane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1.35.1", features = [ "full"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
glob = "0.3.1"
prost-build = "0.12.3"
tonic-build = "0.10.2"
